# sakura

./: .gitignore  CMakeLists.txt  Kconfig.zephyr  README.md  README.rst
doc/: doc.warnings
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.tm4c123  gpio_tm4c123.c
drivers/ieee802154/: CMakeLists.txt  Kconfig  Kconfig.dw1000  ieee802154_dw1000.c  ieee802154_dw1000.h  ieee802154_dw1000_regs.h  ieee802154_dw1000_regs_dev.h
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.tm4c123  Makefile  uart_tm4c123.c
drivers/spi/: CMakeLists.txt  Kconfig  Kconfig.tm4c123  spi_tm4c123.c  spi_tm4c123.h
dts/arm/: Makefile  ti_tm4c123gxl_launchpad.dts  ti_tm4c123gxl_launchpad.fixup
dts/arm/ti/: mem.h  tm4c123.dtsi
ext/: CMakeLists.txt  Kconfig
ext/hal/: Kbuild  Kconfig  Makefile
ext/hal/ti/tivaware/: CMakeLists.txt  Kconfig
ext/hal/ti/tivaware/Include/TM4C123/: TM4C1230E6PM.h  TM4C1231D5PZ.h  TM4C1231E6PM.h  TM4C1231H6PGE.h  TM4C1232D5PM.h  TM4C1236H6PM.h  TM4C1237H6PGE.h  TM4C123AE6PM.h  TM4C123AH6PM.h  TM4C123BH6ZRB.h  TM4C123GH6PZ.h  TM4C123GH6ZXR.h
ext/hal/ti/tivaware/Include/TM4C129/: TM4C1290NCPDT.h  TM4C1290NCZAD.h  TM4C1299NCZAD.h  TM4C129CNCZAD.h
ext/hal/ti/tivaware/source/: system_TM4C123.c
ext/hal/ti/tivaware/source/soc/: CMakeLists.txt
ext/hal/ti/tivaware/source/soc/TM4C123/: TM4C1230C3PM.h  TM4C1230D5PM.h  TM4C1230H6PM.h  TM4C1231C3PM.h  TM4C1231D5PM.h  TM4C1231E6PZ.h  TM4C1231H6PM.h  TM4C1231H6PZ.h  TM4C1232C3PM.h  TM4C1232E6PM.h  TM4C1232H6PM.h  TM4C1233C3PM.h  TM4C1233D5PM.h  TM4C1233D5PZ.h  TM4C1233E6PM.h  TM4C1233E6PZ.h  TM4C1233H6PGE.h  TM4C1233H6PM.h  TM4C1233H6PZ.h  TM4C1236D5PM.h  TM4C1236E6PM.h  TM4C1237D5PM.h  TM4C1237D5PZ.h  TM4C1237E6PM.h  TM4C1237E6PZ.h  TM4C1237H6PM.h  TM4C1237H6PZ.h  TM4C123BE6PM.h  TM4C123BE6PZ.h  TM4C123BH6PGE.h  TM4C123BH6PM.h  TM4C123BH6PZ.h  TM4C123FE6PM.h  TM4C123FH6PM.h  TM4C123GE6PM.h  TM4C123GE6PZ.h  TM4C123GH6PGE.h  TM4C123GH6ZRB.h  system_TM4C123.c
ext/hal/ti/tivaware/source/soc/TM4C129/: TM4C1292NCPDT.h  TM4C1292NCZAD.h  TM4C1294KCPDT.h  TM4C1294NCZAD.h  TM4C1297NCZAD.h  TM4C1299KCZAD.h  TM4C129CNCPDT.h  TM4C129DNCPDT.h  TM4C129DNCZAD.h  TM4C129EKCPDT.h  TM4C129ENCPDT.h  TM4C129ENCZAD.h  TM4C129LNCZAD.h  TM4C129XKCZAD.h  TM4C129XNCZAD.h
ext/qpc/: CMakeLists.txt  Kconfig
framework/: CMakeLists.txt  Kconfig
framework/qpc/: CMakeLists.txt  Kconfig  README.md
framework/qpc/include/: qep.h
framework/qpc/ports/: qep_port.h  qf_port.c  qf_port.h  qs_port.h
framework/qpc/ports/k_thread/: README.rst
framework/qpc/ports/posix/: qf_port.c
(+72 files in other folders)
