add_library(QPC INTERFACE)

target_include_directories(QPC INTERFACE include)
target_include_directories(QPC INTERFACE ports/posix src)
target_include_directories(QPC INTERFACE src)
target_include_directories(QPC INTERFACE ${PROJECT_SOURCE_DIR}/include/posix)

zephyr_library()
if(CONFIG_PTHREAD_IPC)
    zephyr_library_sources(ports/posix/qf_port.c)
elseif(CONFIG_PTHREAD_IPC)
    zephyr_library_sources(ports/k_thread/qf_port.c)
endif()
zephyr_library_sources_ifdef(CONFIG_QPC_QF src/qf/qep_hsm.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QF src/qf/qep_msm.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QF src/qf/qf_act.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QF src/qf/qf_actq.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QF src/qf/qf_defer.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QF src/qf/qf_dyn.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QF src/qf/qf_mem.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QF src/qf/qf_ps.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QF src/qf/qf_qact.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QF src/qf/qf_qeq.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QF src/qf/qf_qmact.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QF src/qf/qf_time.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QK src/qk/qk.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QS src/qs/qs_64bit.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QS src/qs/qs_fp.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QS src/qs/qs_rx.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QS src/qs/qs.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QS src/qs/qutest.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QV src/qv/qv.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QXK src/qxk/qxk_mutex.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QXK src/qxk/qxk_sema.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QXK src/qxk/qxk_xthr.c)
zephyr_library_sources_ifdef(CONFIG_QPC_QXK src/qxk/qxk.c)

zephyr_library_link_libraries(QPC)

if(CONFIG_PTHREAD_IPC)
    target_link_libraries(QPC INTERFACE zephyr_interface)
elseif(CONFIG_PTHREAD_IPC)
    target_link_libraries(QPC INTERFACE zephyr_interface)
endif()
